--- a/XvectorProject/xvectorapp/templates/xvector_Home.html
+++ b/XvectorProject/xvectorapp/templates/xvector_Home.html
@@ -31,7 +31,7 @@
             {% if error %}
             <p>Same file name</p>
             {% endif %}
-            <h1>Home Page</h1>
+            <h1>Home Page updated</h1>
         {% endblock %}
         </div>
     </div>
