new heading added

--- a/XvectorProject/xvectorapp/templates/xvector_Home.html
+++ b/XvectorProject/xvectorapp/templates/xvector_Home.html
@@ -32,7 +32,8 @@
             <p>Same file name</p>
             {% endif %}
             <h1>Home Page updated</h1>
-        {% endblock %}
+            <h1>This is new head</h1>
+             {% endblock %}
         </div>
     </div>
 </body>
