--- a/XvectorProject/xvectorapp/templates/xvector_Home.html
+++ b/XvectorProject/xvectorapp/templates/xvector_Home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Xvector</title>
+    <title>Xvector project</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     {% load static %}
     <link rel='stylesheet' type='text/css' media='screen' href="{% static '/xvector.css' %}">
